--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2025.1.31
 contourpy==1.3.1
 cycler==0.12.1
+dj-database-url==2.3.0
 Django==4.2.19
 fonttools==4.56.0
 gunicorn==20.1.0
@@ -15,4 +16,5 @@ python-dateutil==2.9.0.post0
 setuptools==75.8.2
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.12.2
 wheel==0.45.1
